2017-02-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/logisticRegression.cpp: Added documentation and example
	* man/naiveBayesClassifier.Rd: Ditto
	* NAMESPACE: Exported logisticRegression

2017-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Note issue with RStudio IDE

	* src/naiveBayesClassifier.cpp: Added examples
	* man/naiveBayesClassifier.Rd: Ditto

2017-02-22  Dirk Eddelbuettel  <edd@debian.org>

	* data/trainSet.RData: Reorganised data as single file

2017-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* R/data.R: Documentation for four included data sets from mlpack
	* man/testRes.Rd: Test result data
	* man/testSet.Rd: Test set data
	* man/trainRes.Rd: Train result data
	* man/trainSet.Rd: Train set data

2017-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Several edits and updates

	* DESCRIPTION: Idem

	* rcppmlpack2.Proj: Added for RStudio use
	* .gitignore: Updated for RStudio files

	* .travis.yml: Use https for curl download

2017-01-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (SystemRequirements): Detailed system requirements

	* inst/skeleton/kmeans.cpp: Edited comments and whitespace
	* src/kmeans.cpp: Idem

2017-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, SystemRequirements): Updated and shortened

	* R/inline.R.in: Rewritten / expanded for better plugin support
	* inst/skeleton/configure: New file to create src/Makevars
	* inst/skeleton/configure.win: Idem
	* inst/skeleton/Makevars.in: Simplified, now filled from configure
	* inst/skeleton/Makevars.old: Old version
	* inst/skeleton/Makevars.win.old: Idem

	* inst/examples/kmeansViaPlugin.cpp: kmeans via sourceCpp()

	* inst/skeleton/kmeans.cpp: Updated as well

2017-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R.in: Use configure to determine libraries
	* configure.ac: Also modify R/inline.R.in
	* cleanup: Remove R/inline.R

2017-01-03  Dirk Eddelbuettel  <edd@debian.org>
