@@ -1,6 +1,18 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+#' Run a Cover Tree distance measure analysis which provides a specialised 
+#'
+#' This function performs a distance calculation using a Cover Tree.
+#' A cover tree is a tree specifically designed to speed up nearest-neighbor
+#' computation in high-dimensional spaces.  Each non-leaf node references a
+#' point and has a nonzero number of children, including a \dQuote{self-child} which
+#' references the same point.  A leaf node represents only one point.
+#'
+#' @title Run a Cover Tree distance analysis
+#' @param dataset A matrix of training data values
+#' @param k An integer specifying the number of classes
+#' @return A list with two elements giving the nighbors and their distances
 coverTreeNeighbor <- function(dataset, k) {
     .Call('RcppMLPACK_coverTreeNeighbor', PACKAGE = 'RcppMLPACK', dataset, k)
 }
